cni/npm/examples/allow-tcp-443.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-eighty
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
  - Ingress # Isolates "app=web" pods in the "default" namespace for ingress traffic.
  - Egress # Isolates "app=web" pods in the "default" namespace for egress traffic.
  ingress:
  - ports:
    - protocol: TCP
      port: 80
    from:
    - podSelector:
        matchLabels:
          app: web
